--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,9 @@ quick-xml = { version = "0.22.0", features = ["serde", "serialize"] }
 minidom = "0.13.0"
 serde = { version = "1.0", features = [ "derive" ] }
 clap = { version = "3.0.0-beta.5", features = ["yaml"] }
+csv = "1.1.6"
+ini = "1.3.0"
+chrono = "0.4.19"
+serde_json = "1.0.59"
+async-trait = "0.1.51"
 
