--- a/src/cli.yaml
+++ b/src/cli.yaml
@@ -43,32 +43,90 @@ subcommands:
         version: "1.3"
         author: Someone E. <someone_else@other.com>
         subcommands:
-          - prog:
-              about: Create new program
-              version: "1.3"
-              author: Someone E. <someone_else@other.com>
-              args:
-                - transport:
-                    about: Transportauftrag
-                    required: false
-                    takes_value: true
-                    short: t
-                - package:
-                    about: Paket
-                    required: true
-                    takes_value: true
-                    short: p
-                - name:
-                    about: Name of program
-                    required: true
-                    takes_value: true
+        - prog:
+            about: Create new program
+            version: "1.3"
+            author: Someone E. <someone_else@other.com>
+            args:
+            - transport:
+                about: Transportauftrag
+                required: false
+                takes_value: true
+                short: t
+            - package:
+                about: Paket
+                required: true
+                takes_value: true
+                short: p
+            - name:
+                about: Name of program
+                required: true
+                takes_value: true
+        - class:
+            about: Create new class
+            version: "1.3"
+            author: Someone E. <someone_else@other.com>
+            args:
+            - transport:
+                about: Transportauftrag
+                required: false
+                takes_value: true
+                short: t
+            - package:
+                about: Paket
+                required: true
+                takes_value: true
+                short: p
+            - name:
+                about: Name of program
+                required: true
+                takes_value: true
+            
     - sql:
         args:
-          - sql_exp:
-              takes_value: true
-              required: true
-          - row-number:
-              short: r
-              long: row-number
-              takes_value: true
+            - sql_exp:
+                takes_value: true
+                required: true
+            - row-number:
+                short: r
+                long: row-number
+                takes_value: true
+
+    - transport:
+        args:
+            - uname: 
+                takes_value: true
+                short: u
+    - delete:
+        args:
+            - name:
+                about: Name of program
+                required: true
+                takes_value: true
+    - copy:
+        args:
+            - source:
+                about: Name of program to copy
+                required: true
+                takes_value: true
+            - destination:
+                short: d
+                long: dest
+                takes_value: true
+                about: Sys-ID of Destination to copy to
+            - transport:
+                about: Transportauftrag
+                required: false
+                takes_value: true
+                short: t
+            - package:
+                about: Paket
+                required: true
+                takes_value: true
+                short: p
+            - name:
+                about: Name of program
+                required: true
+                takes_value: true
+
             
