--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,12 @@ ini = "1.3.0"
 chrono = "0.4.19"
 serde_json = "1.0.59"
 async-trait = "0.1.51"
-
+rust-crypto = "0.2.36"
+aes = "0.7.5"
+rand = { version = "0.8.4", features = ["std"] }
+rustc-serialize = "0.3"
+aes-gcm = { version = "0.9.4", features = ["heapless"] }
+heapless = "0.7.3"
+text_io = "0.1.9"
+crossterm = "0.22.1"
 
