--- a/src/cli.yaml
+++ b/src/cli.yaml
@@ -1,7 +1,7 @@
-name: myapp
+name: sapCli
 version: "1.0"
-author: Kevin K. <kbknapp@gmail.com>
-about: Does awesome things
+author: Pascal Frank <pascalfrank17@gmail.com>
+about: A Command Line Inerface to work with external SAP Systems
 args:
     - config:
         short: c
@@ -21,7 +21,6 @@ subcommands:
     - table:
         about: controls testing features
         version: "1.3"
-        author: Someone E. <someone_else@other.com>
         args:
           - name:
               about: Name of database table
@@ -46,7 +45,6 @@ subcommands:
         - prog:
             about: Create new program
             version: "1.3"
-            author: Someone E. <someone_else@other.com>
             args:
             - transport:
                 about: Transportauftrag
@@ -62,10 +60,21 @@ subcommands:
                 about: Name of program
                 required: true
                 takes_value: true
+        - tab: 
+            about: Create new Database Table
+            args: 
+            - name:
+                about: Name of program
+                required: true
+                takes_value: true
+            - description:
+                required: true
+                takes_value: true
+                short: d
+                long: descr
         - class:
             about: Create new class
             version: "1.3"
-            author: Someone E. <someone_else@other.com>
             args:
             - transport:
                 about: Transportauftrag
