--- a/src/cli.yaml
+++ b/src/cli.yaml
@@ -1,5 +1,5 @@
 name: sapCli
-version: "1.0"
+version: "1.1"
 author: Pascal Frank <pascalfrank17@gmail.com>
 about: A Command Line Inerface to work with external SAP Systems
 args:
@@ -62,6 +62,7 @@ subcommands:
                 takes_value: true
         - tab: 
             about: Create new Database Table
+            version: "1.3"
             args: 
             - name:
                 about: Name of program
@@ -118,7 +119,37 @@ subcommands:
                 takes_value: true
                 short: t
     - copy:
-        args:
+        subcommands:
+        - tab:
+            args:
+            - source:
+                about: Name of Database Table
+                required: true
+                takes_value: true
+            - destination:
+                short: d
+                long: dest
+                takes_value: true
+                about: Sys-ID of Destination to copy to
+                required: false
+            - transport:
+                about: Transportauftrag
+                required: false
+                takes_value: true
+                short: t
+            - package:
+                about: Paket
+                required: true
+                takes_value: true
+                short: p
+            - name:
+                short: n
+                long: name
+                required: false
+                about: Name of program
+                takes_value: true
+        - prog:
+            args:
             - source:
                 about: Name of program to copy
                 required: true
@@ -140,7 +171,7 @@ subcommands:
                 short: p
             - name:
                 about: Name of program
-                required: true
+                required: false
                 takes_value: true
-
-            
+                short: n
+                long: name
