--- a/src/cli.yaml
+++ b/src/cli.yaml
@@ -66,6 +66,7 @@ subcommands:
                 about: Name of program
                 required: true
                 takes_value: true
+                alias: prog_name
         - tab: 
             about: Create new Database Table
             version: "1.3"
@@ -179,6 +180,7 @@ subcommands:
                 about: Name of program
                 required: false
                 takes_value: true
+                alias: "prog_name"
          
                
 
