--- a/src/cli.yaml
+++ b/src/cli.yaml
@@ -1,7 +1,7 @@
 name: sapCli
 version: "1.1"
 author: Pascal Frank <pascalfrank17@gmail.com>
-about: A Command Line Inerface to work with external SAP Systems
+about: A Command Line Inerface to work with SAP Systems
 args:
     - config:
         short: c
@@ -40,7 +40,6 @@ subcommands:
     - new:
         about: Create new development object
         version: "1.3"
-        author: Someone E. <someone_else@other.com>
   
         args: 
         - test:
@@ -66,7 +65,7 @@ subcommands:
                 about: Name of program
                 required: true
                 takes_value: true
-                alias: prog_name
+                
         - tab: 
             about: Create new Database Table
             version: "1.3"
@@ -91,7 +90,7 @@ subcommands:
                 short: t
             - package:
                 about: Paket
-                required: true
+ 
                 takes_value: true
                 short: p
             - name:
@@ -115,7 +114,10 @@ subcommands:
                 takes_value: true
                 short: u
     - delete:
-        args:
+        subcommands:
+        - prog:
+
+            args:
             - name:
                 about: Name of program
                 required: true
