--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ aes-gcm = { version = "0.9.4", features = ["heapless"] }
 heapless = "0.7.3"
 text_io = "0.1.9"
 crossterm = "0.22.1"
-format_xml = "0.1"
+format_xml = "0.2.0"
+i18n_codegen = "0.1.1"
 
 
